// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of agri/csv 1`] = `
Array [
  "budget.eu_contrib.value",
  "budget.funding_area.0",
  "budget.mmf_heading",
  "description",
  "ec_priorities.0",
  "media.0.name",
  "media.0.url",
  "media.0.meta.type",
  "programme_name",
  "project_id",
  "project_locations.0.country_code",
  "project_locations.0.centroid",
  "project_locations.0.location.coordinates",
  "results.result",
  "third_parties.0.name",
  "third_parties.0.role",
  "timeframe.from",
  "timeframe.to",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of budg/xls 1`] = `
Array [
  "action",
  "budget.eu_contrib.value",
  "call_year",
  "description",
  "programme_name",
  "project_id",
  "project_locations.0.country_code",
  "project_locations.1.country_code",
  "project_locations.2.country_code",
  "project_locations.3.country_code",
  "project_locations.4.country_code",
  "project_locations.5.country_code",
  "project_locations.6.country_code",
  "project_locations.7.country_code",
  "project_locations.8.country_code",
  "project_locations.9.country_code",
  "project_locations.10.country_code",
  "project_locations.11.country_code",
  "project_locations.12.country_code",
  "project_locations.13.country_code",
  "project_locations.14.country_code",
  "results.available",
  "results.result",
  "status",
  "sub_programme_name",
  "success_story",
  "third_parties.0.name",
  "third_parties.0.type",
  "third_parties.0.address",
  "third_parties.0.region",
  "third_parties.0.role",
  "third_parties.0.country",
  "third_parties.0.website",
  "third_parties.1.name",
  "third_parties.1.type",
  "third_parties.1.address",
  "third_parties.1.region",
  "third_parties.1.role",
  "third_parties.1.country",
  "third_parties.1.website",
  "third_parties.2.name",
  "third_parties.2.type",
  "third_parties.2.address",
  "third_parties.2.region",
  "third_parties.2.role",
  "third_parties.2.country",
  "third_parties.2.website",
  "third_parties.3.name",
  "third_parties.3.type",
  "third_parties.3.address",
  "third_parties.3.region",
  "third_parties.3.role",
  "third_parties.3.country",
  "third_parties.3.website",
  "third_parties.4.name",
  "third_parties.4.type",
  "third_parties.4.address",
  "third_parties.4.region",
  "third_parties.4.role",
  "third_parties.4.country",
  "third_parties.4.website",
  "third_parties.5.name",
  "third_parties.5.type",
  "third_parties.5.address",
  "third_parties.5.region",
  "third_parties.5.role",
  "third_parties.5.country",
  "third_parties.5.website",
  "third_parties.6.name",
  "third_parties.6.type",
  "third_parties.6.address",
  "third_parties.6.region",
  "third_parties.6.role",
  "third_parties.6.country",
  "third_parties.6.website",
  "third_parties.7.name",
  "third_parties.7.type",
  "third_parties.7.address",
  "third_parties.7.region",
  "third_parties.7.role",
  "third_parties.7.country",
  "third_parties.7.website",
  "third_parties.8.name",
  "third_parties.8.type",
  "third_parties.8.address",
  "third_parties.8.region",
  "third_parties.8.role",
  "third_parties.8.country",
  "third_parties.8.website",
  "third_parties.9.name",
  "third_parties.9.type",
  "third_parties.9.address",
  "third_parties.9.region",
  "third_parties.9.role",
  "third_parties.9.country",
  "third_parties.9.website",
  "third_parties.10.name",
  "third_parties.10.type",
  "third_parties.10.address",
  "third_parties.10.region",
  "third_parties.10.role",
  "third_parties.10.country",
  "third_parties.10.website",
  "third_parties.11.name",
  "third_parties.11.type",
  "third_parties.11.address",
  "third_parties.11.region",
  "third_parties.11.role",
  "third_parties.11.country",
  "third_parties.11.website",
  "third_parties.12.name",
  "third_parties.12.type",
  "third_parties.12.address",
  "third_parties.12.region",
  "third_parties.12.role",
  "third_parties.12.country",
  "third_parties.12.website",
  "third_parties.13.name",
  "third_parties.13.type",
  "third_parties.13.address",
  "third_parties.13.region",
  "third_parties.13.role",
  "third_parties.13.country",
  "third_parties.13.website",
  "third_parties.14.name",
  "third_parties.14.type",
  "third_parties.14.address",
  "third_parties.14.region",
  "third_parties.14.role",
  "third_parties.14.country",
  "third_parties.14.website",
  "third_parties.15.name",
  "third_parties.15.type",
  "third_parties.15.address",
  "third_parties.15.region",
  "third_parties.15.role",
  "third_parties.15.country",
  "third_parties.15.website",
  "third_parties.16.name",
  "third_parties.16.type",
  "third_parties.16.address",
  "third_parties.16.region",
  "third_parties.16.role",
  "third_parties.16.country",
  "third_parties.16.website",
  "timeframe.from",
  "timeframe.to",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of iati/csv 1`] = `
Array [
  "budget.eu_contrib.value",
  "description",
  "project_id",
  "project_locations.0.country_code",
  "reporting_organisation",
  "timeframe.from",
  "timeframe.to",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of inforegio/json 1`] = `
Array [
  "budget.total_cost.value",
  "budget.eu_contrib.value",
  "budget.funding_area.0",
  "description",
  "period",
  "project_id",
  "project_locations.0.country_code",
  "project_locations.0.region",
  "project_locations.0.nuts.0.code",
  "project_locations.0.nuts.0.level",
  "project_website",
  "themes.0",
  "themes.1",
  "themes.2",
  "third_parties.0.name",
  "third_parties.0.address",
  "third_parties.0.role",
  "third_parties.0.country",
  "timeframe.from",
  "timeframe.to",
  "title",
  "type.0",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of inforegio/xml 1`] = `
Array [
  "budget.total_cost.value",
  "budget.eu_contrib.value",
  "description",
  "period",
  "project_id",
  "project_locations.0.country_code",
  "project_locations.0.region",
  "project_locations.0.nuts.0.code",
  "project_website",
  "themes.0",
  "title",
  "type.0",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of valor/xls 1`] = `
Array [
  "budget.eu_contrib.value",
  "call_year",
  "description",
  "programme_name",
  "project_id",
  "project_locations.0.country_code",
  "results.available",
  "results.result",
  "status",
  "success_story",
  "third_parties.0.name",
  "third_parties.0.type",
  "third_parties.0.address",
  "third_parties.0.role",
  "third_parties.0.country",
  "third_parties.0.website",
  "title",
]
`;

exports[`Helper getAvailableProperties "@eubfr/ingestion-quality-analyzer" works for any existing transform Works with results of wifi4eu/xls 1`] = `
Array [
  "call_year",
  "description",
  "third_parties.0.name",
  "third_parties.0.role",
  "project_id",
  "project_locations.0.address",
  "project_locations.0.country_code",
  "project_locations.0.postal_code",
  "project_locations.0.town",
  "project_website",
  "timeframe.from",
  "title",
]
`;
